
Thu Aug 10 14:33:51 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb.h - Always define KRB5_MAX_FAIL_COUNT.


Mon Aug 07 11:22:57 1995   Chris Provenzano (proven@mit.edu)

	* kdb.h : Add prototypes for krb5_dbe_{en,de}code_last_pwd_change(),
		krb5_dbe_{apw,cpw,ark,crk}(),

Fri Aug 4 16:10:34 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_proto.h - Add prototype definitions for new libkadm functions in
		keysalt.c dealing with key/salt tuples.
	* kdb.h - Add encode/decode macros for integers for use between kdb
		modules.

Thu Aug 03 12:19:52 1995   Chris Provenzano (proven@mit.edu)

	* kdb.h : Added prototype for krb5_dbe_cpw() the new dd entry
		change password routine.

Mon Jul 31 15:50:25 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm.h - Add new protocol definitions.  Also, add krb5_key_salt_tuple
		and add it to the krb5_read_realm_params structure so that
		we have a list of supported key/salt pairs.  Convert keytype
		and enctype to be the correct datatype.
	* adm_proto.h - Add string conversion prototypes.


Thu Jul 27 15:06:35 EDT 1995	Paul Park	(pjpark@mit.edu)
	* {asn1,dbm,ext-proto,k5-{config,errors,sockets},libos,los-proto,
	   mit-des,preauth,rsa-md5,sysincl}.h - Deleted.
	* Makefile.in - Remove these headers from KRB5_HEADERS.
	* configure.in - Change AC_INIT to look for kdb.h.


Thu Jul 27 02:59:05 1995   Chris Provenzano (proven@mit.edu)

        * kdb.h - Define new kdb format.

Mon Jul 17 15:03:43 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm.h - Add per-realm parameter block data structure
		(krb5_realm_params).
	* adm_proto.h - Add dummy declaration for krb5_realm_params if adm.h
		not included.  Add prototypes for realm parameter functions.
	* kdb.h - Add stash file parameter to krb5_db_fetch_mkey().

Sun Jul  9 21:47:49 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* los-proto.h: Add krb5_auth_con_genaddrs prototype

Fri Jul 7 15:58:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* rsa-md5.h - Add RSA_MD5_DES_CONFOUND_LENGTH - the length of the